[package]
name = "rsjwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsjwt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["chrono"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.38"
