[package]
name = "rsjwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsjwt"
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "9.3.0"
pyo3 = { version = "0.24.0", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
